--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -24,13 +24,22 @@
         <android.support.v7.widget.CardView
             android:id="@+id/about_key_card"
             style="@style/CustomCardLayout"
-            card_view:cardCornerRadius="@dimen/common_space_small"
+            card_view:cardCornerRadius="@dimen/common_space_medium"
             card_view:cardElevation="@dimen/common_space_tiny">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:padding="@dimen/common_space_medium"
+                    android:textSize="@dimen/common_textsize_large"
+                    android:text="@string/help"/>
 
                 <include
                     android:id="@+id/about_tooshort_cardlinetxt"
@@ -57,7 +66,7 @@
             android:id="@+id/about_pmanager_card"
             style="@style/CustomCardLayout"
             android:clickable="true"
-            card_view:cardCornerRadius="@dimen/common_space_small"
+            card_view:cardCornerRadius="@dimen/common_space_medium"
             card_view:cardElevation="@dimen/common_space_tiny">
 
             <LinearLayout
@@ -86,6 +95,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:padding="@dimen/common_space_medium"
+                    android:textSize="@dimen/common_textsize_large"
+                    android:text="How does Password123 work"/>
+
                 <include
                     android:id="@+id/about_tech_cardlineimg"
                     layout="@layout/common_cardline_img" />
@@ -104,6 +122,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:padding="@dimen/common_space_medium"
+                    android:textSize="@dimen/common_textsize_large"
+                    android:text="Credits"/>
 
                 <include
                     android:id="@+id/about_licence_cardlineimg"
