--- a/app/src/main/res/layout/common_cardline_text.xml
+++ b/app/src/main/res/layout/common_cardline_text.xml
@@ -3,21 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/common_space_small">
+    android:gravity="top"
+    android:padding="@dimen/common_space_tiny">
 
     <TextView
         android:id="@+id/aboutcardline_texticon_textview"
         android:layout_width="@dimen/about_icon_size"
-        android:layout_height="@dimen/about_icon_size"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="@dimen/common_space_medium"/>
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_margin="@dimen/common_space_small"/>
 
     <TextView
         android:id="@+id/aboutcardline_text_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="@dimen/common_space_medium"
-        android:textStyle="italic" />
+        android:layout_margin="@dimen/common_space_small"/>
 
 </co.early.password123.ui.about.CardLineText>
