--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 
     <dimen name="common_textsize_small">12sp</dimen>
     <dimen name="common_textsize_medium">17sp</dimen>
+    <dimen name="common_textsize_large">21sp</dimen>
 
     <dimen name="common_space_tiny">2dp</dimen>
     <dimen name="common_space_small">5dp</dimen>
@@ -12,7 +13,7 @@
     <dimen name="icon_size">65dp</dimen>
     <dimen name="edittext_radius">65dp</dimen>
 
-    <dimen name="about_icon_size">100dp</dimen>
+    <dimen name="about_icon_size">80dp</dimen>
     <dimen name="about_card_icon_size">65dp</dimen>
 
 
