--- a/app/src/main/res/layout/common_cardline_img.xml
+++ b/app/src/main/res/layout/common_cardline_img.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<co.early.password123.ui.about.CardLineImage xmlns:android="http://schemas.android.com/apk/res/android"
+<co.early.password123.ui.common.widgets.CardLineImage xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="top"
-    android:padding="@dimen/common_space_tiny">
+    android:padding="@dimen/cmn_space_tiny">
 
     <ImageView
         android:id="@+id/aboutcardline_imgicon_imgview"
         android:layout_width="@dimen/about_icon_size"
         android:layout_height="@dimen/about_icon_size"
-        android:layout_margin="@dimen/common_space_small"/>
+        android:tint="@color/colorAccent"
+        android:layout_margin="@dimen/cmn_space_small"/>
 
     <TextView
         android:id="@+id/aboutcardline_text_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/common_space_small"/>
+        android:layout_margin="@dimen/cmn_space_small"/>
 
-</co.early.password123.ui.about.CardLineImage>
+</co.early.password123.ui.common.widgets.CardLineImage>
