--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,8 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- Base application theme. No action bar because we are using
+    support:appcompat-v7 and AppCompatActivity (add a Toolbar in layout if we need one) -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -12,9 +13,9 @@
         <item name="android:background">@color/colorPW123GreyDark</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/common_space_medium</item>
-        <item name="android:layout_marginEnd">@dimen/common_space_medium</item>
-        <item name="android:layout_marginStart">@dimen/common_space_medium</item>
+        <item name="android:layout_marginBottom">@dimen/cmn_space_medium</item>
+        <item name="android:layout_marginEnd">@dimen/cmn_space_medium</item>
+        <item name="android:layout_marginStart">@dimen/cmn_space_medium</item>
     </style>
 
 </resources>
