--- a/app/src/main/res/layout/common_cardline_text.xml
+++ b/app/src/main/res/layout/common_cardline_text.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<co.early.password123.ui.about.CardLineText xmlns:android="http://schemas.android.com/apk/res/android"
+<co.early.password123.ui.common.widgets.CardLineText xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="top"
-    android:padding="@dimen/common_space_tiny">
+    android:padding="@dimen/cmn_space_tiny">
 
     <TextView
         android:id="@+id/aboutcardline_texticon_textview"
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:layout_margin="@dimen/common_space_small"/>
+        android:layout_margin="@dimen/cmn_space_small"/>
 
     <TextView
         android:id="@+id/aboutcardline_text_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/common_space_small"/>
+        android:layout_margin="@dimen/cmn_space_small"/>
 
-</co.early.password123.ui.about.CardLineText>
+</co.early.password123.ui.common.widgets.CardLineText>
